# Ren-SDK

./: .env  Cargo.toml  FFI_GUIDE.md  README.md  WASM_BUILD.md  build.sh  cbindgen.toml
.cargo/: config.toml
docs/: crypto.md
examples/: basic_usage.rs
examples/android/: README.md  RenSDK.kt
examples/flutter/: README.md  pubspec.yaml
examples/flutter/lib/: main.dart  ren_sdk.dart  ren_sdk_simple.dart
examples/ios/: README.md  RenSDK.swift
examples/native/: README.md
examples/native/linux/: main.c
examples/native/windows/: main.c
examples/web/: README.md  index.html  package.json
src/: client.rs  e2ee.rs  error.rs  lib.rs  main.rs
src/crypto/: crypto.rs
src/crypto/wrappers/: wasm.rs  wrapper.rs
src/ffi/: c_ffi.rs  mod.rs  wasm.rs
src/network/: mod.rs
src/network/api/: auth.rs  chats.rs  mod.rs  users.rs
src/network/api/types/: auth.mod.rs  auth.rs  chats.rs  messages.rs  mod.rs  users.rs
src/network/websocket/: mod.rs
tests/: crypto_tests.rs
