[package]
name = "ren-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Taiidzy <taiidzy@yandex.ru>"]
description = "Ren-SDK — cross-platform E2EE messenger core (Rust)"
license = "MIT"
repository = "https://github.com/Taiidzy/Ren-SDK"

[lib]
name = "ren_sdk"
path = "src/lib.rs"
# даём несколько типов сборки — rlib для Rust, cdylib/staticlib для FFI/mobile
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
# по умолчанию native (desktop/mobile) — включает tokio
default = ["native", "crypto_x25519", "websocket"]
native = ["tokio"]
websocket = ["tokio-tungstenite", "futures-util", "http"]
ffi = []            # включи, когда собираешь cdylib/staticlib для нативного FFI
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "console_error_panic_hook", "crypto_x25519"]
crypto_x25519 = ["x25519-dalek", "chacha20poly1305", "hkdf", "sha2", "pbkdf2", "rand", "getrandom"]
# можно добавить другие фичи: storage_sqlite, storage_sled, transport_quic и т.д.

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
once_cell = "1.18"
pretty_env_logger = "0.5"
base64 = "0.22"

# async runtime (optional, не для WASM)
tokio = { version = "1.36", optional = true, features = ["rt-multi-thread", "macros", "sync"] }

# wasm (optional)
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# crypto deps — остаются опциональными и подключаются через feature "crypto_x25519"
x25519-dalek = { version = "3.0.0-pre.1", optional = true, features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.9.2", optional = true }  # для OsRng
getrandom = { version = "0.2", optional = true }

# network deps - условные для WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
version = "0.12.24"
features = ["json", "gzip", "native-tls", "multipart"]

[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
version = "0.12.24"
default-features = false
features = ["json"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio-tungstenite]
version = "0.24"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.futures-util]
version = "0.3"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.http]
version = "1.0"
optional = true


[dev-dependencies]

[package.metadata.cbindgen]
# если будешь генерировать C заголовки для FFI
language = "C"
include_guard = "REN_SDK_H"

[[bin]]
name = "ren-cli"
path = "src/main.rs"